nsg_condition.tf
# ------------------- Associate NSGs to subnets -------------------
resource "azurerm_subnet_network_security_group_association" "web_assoc" {
  subnet_id                 = azurerm_subnet.web-sn.id
  network_security_group_id = azurerm_network_security_group.nsg_web.id
}

resource "azurerm_subnet_network_security_group_association" "app_assoc" {
  subnet_id                 = azurerm_subnet.app-sn.id
  network_security_group_id = azurerm_network_security_group.nsg_app.id
}
